--- a/src/app/css/page.module.css
+++ b/src/app/css/page.module.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Ubuntu+Mono&display=swap");
 .main {
   font-family: "Comfortaa", monospace;
+  overflow-y: hidden;
 }
 
 .container {
